test/depConsume1.slq

def main(){
	x:=H(0:ğ”¹);
	y:=dup(x);
	y:=y; // error
	__show(__query("dep",y)); // {x}
	x:=H(x);
	__show(__query("dep",y)); // âŠ¤
	return x;
}
